--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,6 @@
 
             <div id="todolist-container">
                 <ul class="task-list">
-                    <li class="task-item">たこやき買う</li>
-                    <li class="task-item">あいふぉん充電器買う</li>
                 </ul>
                 <button class="add">Add</button>
             </div>
@@ -44,6 +42,13 @@
 
         </div>
 
+        <script type="text/template" id="bb-marionette-task">
+            <li class="task-item"><%= body %></li>
+        </script>
+        <script type="text/template" id="bb-marionette-input-task">
+            <li class="input-item"><input type="text" /></li>
+        </script>
+
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
@@ -51,6 +56,8 @@
         <script src="bower_components/sass-bootstrap/dist/js/bootstrap.js"></script>
         <script src="bower_components/mustache/mustache.js"></script>
         <script src="bower_components/underscore/underscore.js"></script>
+        <script src="bower_components/backbone/backbone.js"></script>
+        <script src="bower_components/backbone.marionette/lib/backbone.marionette.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
